fix: remove `overflow: auto` from routes

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,6 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	overflow: auto;
 }
 
 .rsn-route-enter {
